--- a/lesson_7/css/style.css
+++ b/lesson_7/css/style.css
@@ -34,6 +34,7 @@ body {
 	margin-bottom: 16px;
 	font-weight: 500;
 	text-transform: capitalize;
+	background: url("../img/11.jpg") no-repeat 340px 2px;
 }
 .title-block {
 	font-size: 60px;
@@ -50,11 +51,8 @@ body {
 p {
 	line-height: 1.46;
 }
-.icons-text p {
+.icons-text {
 	margin-bottom: 32px;
-}
-.icons-name {
-	max-width: 347px;
 }
 .icons-link,
 .pixels-link,
@@ -62,22 +60,23 @@ p {
 	font-size: 30px;
 	font-weight: 700;
 }
-.link {
+.links {
 	color: #40ddb6;
 	font-weight: 400;
 }
 .photography-name {
-	max-width: 270px;
 	margin-bottom: 11px;
 }
 .icons-link {
 	margin-bottom: 100px;
 }
-.splash-text p {
+.splash-text{
 	margin-bottom: 100px;
 }
-.photography-text p,
-.color-text p {
+.photography-text {
+	margin-bottom: 32px;
+}
+.color-text{
 	margin-bottom: 24px;
 }
 .color-text p {
@@ -93,7 +92,6 @@ p {
 	margin-bottom: 8px;
 }
 .fonts-name {
-	max-width: 113px;
 	margin-bottom: 11px;
 }
 .fonts {
@@ -107,9 +105,6 @@ p {
 	padding: 15px;
 	max-width: 1257.5px;
 	margin: 0 auto;
-}
-.project-block {
-	margin-left: 393.71px;
 }
 .project {
 	font-family: "Poppins", sans-serif;
@@ -126,30 +121,36 @@ p {
 	color: #7D7D7D;
 	line-height: 1.94;
 	font-weight: 500;
-	text-indent: 20px;
+	padding-left: 20px;
 	margin-bottom: 35px;
 }
 /*==============================3-rd part===========================*/
 
 .india-block {
 	font-size: 0px;
-	margin: 100px;
+	margin: 0 auto;
+	max-width: 1219px;
+	
 }
-.image-restange {
-	display: inline-block;
-	width: 6px;
-	margin-right: 15px;
-	border-radius: 10px;
-	margin-top: 8px;
+.india-text{
+	background: url("../img/21.jpg") no-repeat;
+	padding-left: 21px;
+}
+.clothing-subtitle {
+	margin-bottom: 25px;
+	color: #807D7E;
+	font-size: 20px;
+	line-height: 1.68;
+	letter-spacing: 0.4px;
 }
 .clothing-text {
 	display: inline-block;
-	width: 1219px;
-	font-size: 20px;
+		font-size: 20px;
 	color: #807D7E;
 	font-family: "Causten", sans-serif;
 	line-height: 1.68;
 	letter-spacing: 0.4px;
+	margin-bottom: 25px;
 }
 .clothing-title,
 .clothing-subtitle {
@@ -160,6 +161,7 @@ p {
 	font-size: 28px;
 	color: #3C4242;
 	letter-spacing: 0.56px;
+	margin-bottom: 30px;
 }
 .euphoria {
 	font-weight: 700;
@@ -203,26 +205,37 @@ p {
 .jewels-image {
 	display: inline-block;
 	vertical-align: top;
+}
+.second-wrapper {
+	vertical-align: middle;
+	display: inline-block;
+	border-radius: 235px;
+	border: 1px solid #502203;
+	margin-right: 20px;
+}
+.second-wrapper img {
 	border-radius: 235px;
 }
 .second-image {
+	width: 177px;
+	height: 336px;
+	margin: 0px 10px -10px -14px;
+	padding-top: 14px;
+}
+.first-wrapper {
 	vertical-align: middle;
-	width: 187px;
-	height: 350px;
-	margin: 0px 30px 0px -10px;
+	display: inline-block;
 	border-radius: 235px;
-	border-top: 1px #502203 solid;
-	border-right: 1px #502203 solid;
-	padding: 14px 10px 0px 0px;
+	border: 1px solid #502203;
+}
+.first-wrapper img {
+	border-radius: 235px;
 }
 .first-image {
-	vertical-align: middle;
-	width: 318px;
-	height: 519px;
-	border-top: 1px #502203 solid;
-	border-right: 1px #502203 solid;
-	border-radius: 235px;
-	margin-left: -10px;
-	padding: 19px 11px 0px 0px;
+		width: 307px;
+	height: 500px;
+	margin: 0px 11px -19px -11px;
+	padding-top: 19px;
 }
+
 
